--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -1,15 +1,12 @@
-.container {
-  max-width: 36rem;
-  padding: 0 1rem;
-  margin: 3rem auto 6rem;
-}
-
-.header {
+.wholePage {
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
 }
 
-.backToHome {
-  margin: 3rem 0 0;
+.main {
+  max-width: 70rem;
+  padding: 2rem 1rem;
+  margin: 6rem auto 6rem;
 }
